tests/ui/typeck/issue-114918/const-in-struct-type-arg.stderr
error[E0308]: mismatched types
  --> $DIR/const-in-struct-type-arg.rs:11:19
   |
LL |     let s = S::<{ () }> { arr: [5, 6, 7]};
   |                   ^^ expected `usize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
